outputs/spx-test/reevo/2025-07-28_20-15-52/problem_iter23_response3.txt_stdout.txt
[*] Running ...
Traceback (most recent call last):
  File "/home/renjunji_2023/reevo/problems/spx/eval.py", line 68, in <module>
    heuristics = load_heuristic_func(code_path)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/renjunji_2023/reevo/problems/spx/eval.py", line 19, in load_heuristic_func
    spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/renjunji_2023/reevo/problems/spx/tmp/gpt_temp_3_eb46da3a.py", line 3
    # Calculate the 5-day, 20-day, and 60-day returns
                                                     ^
IndentationError: expected an indented block after function definition on line 2
